--- a/three/index.html
+++ b/three/index.html
@@ -15,7 +15,7 @@
      <script type="module" src="main.js"></script>
      
     <script>
-      const socket = new WebSocket('ws://192.168.1.142:5173/ws');
+      const socket = new WebSocket('ws://localhost:5200/ws');
 
       socket.addEventListener('error', (event) => {
           console.error('WebSocket error: ', event);
